deploy/kubernetes/defenders-coverage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: defenders-coverage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: defenders-coverage
  template:
    metadata:
      labels:
        app: defenders-coverage
    spec:
      containers:
        - name: defenders-coverage
          image: focer/pc-defenders-coverage:latest
          imagePullPolicy: "Always"
          ports:
---
