deploy/kubernetes/defenders-deployed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: defenders-deployed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: defenders-deployed
  template:
    metadata:
      labels:
        app: defenders-deployed
    spec:
      containers:
        - name: defenders-deployed
          image: focer/pc-defenders-deployed:latest
          imagePullPolicy: "Always"
          ports:
---
