deploy/kubernetes/postgres-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: historical-db  # Sets Deployment name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: historical-db
  template:
    metadata:
      labels:
        app: historical-db
    spec:
      containers:
        - name: historical-db
          image: jtb75/pc-postgres:latest
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432  # Exposes container port
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
              subPath: postgres
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: historical-db-pv-claim
