deploy/kubernetes/backend-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      containers:
        - name: backend-api
          image: jtb75/pc-backend:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 5050  # Exposes container port
---
apiVersion: v1
kind: Service
metadata:
  name: backend-api
  labels:
    app: backend-api
spec:
  type:  ClusterIP
  ports:
    - port: 5050
  selector:
    app: backend-api
