deploy/kubernetes/cache-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-cache
  template:
    metadata:
      labels:
        app: redis-cache
    spec:
      containers:
        - name: redis-cache
          image: focer/pc-cache:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 6379  # Exposes container port
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cache # Sets service name
  labels:
    app: redis-cache # Labels and Selectors
spec:
  type:  ClusterIP # Sets service type
  ports:
    - port: 6379 
  selector:
    app: redis-cache
