deploy/kubernetes/cache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
        - name: cache
          image: jtb75/pc-cache:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 6379  # Exposes container port
---
apiVersion: v1
kind: Service
metadata:
  name: cache # Sets service name
  labels:
    app: cache # Labels and Selectors
spec:
  type:  ClusterIP # Sets service type
  ports:
    - port: 6379 
  selector:
    app: cache
