deploy/kubernetes/historical-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: historical-db  # Sets Deployment name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: historical-db
  template:
    metadata:
      labels:
        app: historical-db
    spec:
      containers:
        - name: historical-db
          image: jtb75/pc-postgres:latest
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432  # Exposes container port
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
              subPath: postgres
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: historical-db-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: historical-db # Sets service name
  labels:
    app: historical-db # Labels and Selectors
spec:
  type:  ClusterIP # Sets service type
  ports:
    - port: 5432 # Sets port to run the postgres application
  selector:
    app: historical-db
---
