deploy/kubernetes/postgres-edw.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-edw  # Sets Deployment name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-edw
  template:
    metadata:
      labels:
        app: postgres-edw
    spec:
      containers:
        - name: postgres-edw
          image: jtb75/pc-postgres:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 5432  # Exposes container port
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
              subPath: postgres
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-edw-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-edw # Sets service name
  labels:
    app: postgres-edw # Labels and Selectors
spec:
  type:  ClusterIP # Sets service type
  ports:
    - port: 5432 # Sets port to run the postgres application
  selector:
    app: postgres-edw
---
