deploy/kubernetes/frontend-dash.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-dash
  template:
    metadata:
      labels:
        app: frontend-dash
    spec:
      containers:
        - name: frontend-dash
          image: jtb75/pc-frontend:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8050  # Exposes container port
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-dash # Sets service name
  labels:
    app: frontend-dash # Labels and Selectors
spec:
  type:  ClusterIP # Sets service type
  ports:
    - port: 8050 
  selector:
    app: frontend-dash
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-dash
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /dashboard
          pathType: Prefix
          backend:
            service:
              name: frontend-dash
              port:
                number: 8050
